# RaspberryPI_Essais

.github/workflows/: cmake-multi-platform.yml  compile  compile.yml
HelloWorldCMake/: .gitignore  CMakeLists.txt  CMakePresets.json  HelloWorld2.h  HelloWorld3.cpp  HelloWorldCMake.cpp  HelloWorldCMake.h  HelloWorld_test.cpp  cmake_install.cmake  vcpkg-configuration.json  vcpkg.json
HelloWorldCMake/tests/: hello_world_test.cpp  main.cpp
ProjetSuperDur/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
ProjetSuperDur/BoostApplication/: CMakeLists.txt
ProjetSuperDur/BoostBeast/: CMakeLists.txt
ProjetSuperDur/BoostBeast/include/: export.h
ProjetSuperDur/BoostBeast/src/: BoostBeast.cpp
ProjetSuperDur/BoostPython/: CMakeLists.txt
ProjetSuperDur/BoostPython/include/: BoostPython.h  export.h
ProjetSuperDur/BoostPython/scripts/: test.py
ProjetSuperDur/BoostPython/src/: BoostPython.cpp  pch.h
ProjetSuperDur/ProjetSuperDurApp/: CMakeLists.txt
ProjetSuperDur/ProjetSuperDurApp/src/: ProjetSuperDur.cpp  ProjetSuperDur.h
ProjetSuperDur/ProjetSuperDurDll/: CMakeLists.txt
ProjetSuperDur/ProjetSuperDurDll/include/: ProjetSuperDurDll.h  export.h
ProjetSuperDur/ProjetSuperDurDll/locales/: trad_dll.pot
ProjetSuperDur/ProjetSuperDurDll/locales/en/LC_MESSAGES/: ProjetSuperDurDll.mo  ProjetSuperDurDll.po
ProjetSuperDur/ProjetSuperDurDll/locales/es/LC_MESSAGES/: trad_dll.mo  trad_dll.po
ProjetSuperDur/ProjetSuperDurDll/locales/fr/LC_MESSAGES/: ProjetSuperDurDll.mo  ProjetSuperDurDll.po
ProjetSuperDur/ProjetSuperDurDll/src/: ProjetSuperDurDll.cpp
ProjetSuperDur/ProjetSuperDurTest/: CMakeLists.txt
ProjetSuperDur/ProjetSuperDurTest/src/: main.cpp  pch.h  unitary_test.cpp  unitary_test_2.cpp
ProjetSuperDur/cmake/: CLangFormat.cmake  CopyFolder.cmake
